--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>WebGL</title>
 <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
-<script type="module" src="js/scripts.js"></script>
+<script type="module" src="https://LeoGreed2909.github.io/TwitchBar/js/scripts.js"></script>
 </head>
 <header>
 <h1>test</h1>
