--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>WebGL</title>
-<link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+<link rel="stylesheet" href="https://LeoGreed2909.github.io/TwitchBar/css/stylesheet.css" type="text/css" />
 <script type="module" src="https://LeoGreed2909.github.io/TwitchBar/js/scripts.js"></script>
 </head>
 <header>
