--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <?php
+header("Access-Control-Allow-Origin: *");
+...
+?>
 <meta charset="utf-8" />
 <title>WebGL</title>
 <link rel="stylesheet" href="https://LeoGreed2909.github.io/TwitchBar/css/stylesheet.css" type="text/css" />
